# AIProcSrv

./: CMakeLists.txt  config.xml  main.cpp
include/mainframe/: aiapplicateengineer.h  aiengineerproc.h  aiservice.h  aiserviceengeer.h  appdangerdetect.h  i_aiapplication.h  mainframe.h  monitor.h  rtmppub.h
include/mainframe1/: mainframe.h
include/mp/: MemoryPool.h
include/plugins/: i_aiengine.h
include/rtmppublisher/: MemoryPool.h
include/thirft-gen/: AIProReq.h  test_constants.h  test_types.h
src/mainframe/: aiapplicateengineer.cpp  aiengineerproc.cpp  aiservice.cpp  aiserviceengeer.cpp  appdangerdetect.cpp  mainframe.cpp  monitor.cpp  rtmppub.cpp
src/mp/: MemoryChunk.cpp  MemoryPool.cpp  Mutex.cpp
src/rtmpPubliser/: AACEncoder.cpp  AACRTMPPackager.cpp  AACStream.cpp  FilteredVideoSource.cpp  H264Encoder.cpp  H264RTMPPackager.cpp  H264Stream.cpp  MemoryPool.cpp  PCMSource.cpp  PacketQueue.cpp  RTMPPublisher.cpp  V4L2Source.cpp  YUY2Converter.cpp
src/thirft-gen/: AIProReq.cpp  test_constants.cpp  test_types.cpp
